# rpoe-x

./: .env.example  .gitignore  .hfignore  Dockerfile  README.md  __init__.py  client.py  inference.py  model_client.py  models.py  openenv.yaml  pyproject.toml
demo/: surge_comparison.txt  surge_scenario.py
server/: app.py  env.py
tasks/: graders.py
tests/: test_env.py
training/: colab_rpoe_x_grpo_training (1).ipynb  colab_rpoe_x_grpo_training.ipynb  curves.json  local_inference_test.ipynb  plot_curve.py  rpoe_x_training.ipynb  train.py
