[project]
name = "rpoe-x"
version = "0.1.0"
description = "RPOE-X: Multi-Agent Rotary Parking Optimization Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "numpy",
    "python-dotenv",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "tasks"]

[tool.hatch.build.targets.wheel.force-include]
"models.py" = "models.py"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
