[project]
name = "rpoe_x"
version = "0.1.0"
description = "RPOE-X: Multi-Agent Rotary Parking Optimization Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "numpy",
    "python-dotenv",
    "openai",
    "trl>=0.29.0",
    "peft",
    "matplotlib>=3.10.9",
]

[project.scripts]
server = "rpoe_x.server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
train = [
    "trl[vllm]==0.29.0",
    "vllm>=0.11.0",
    "torch>=2.8.0,<2.10.0",
    "peft",
    "transformers",
    "datasets",
    "numpy",
    "matplotlib",
]

[tool.setuptools]
include-package-data = true
packages = ["rpoe_x", "rpoe_x.server", "rpoe_x.tasks", "rpoe_x.training"]
package-dir = {"rpoe_x" = ".", "rpoe_x.server" = "server", "rpoe_x.tasks" = "tasks", "rpoe_x.training" = "training"}

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
